--- a/html/lab/index.html
+++ b/html/lab/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
 	<title> -=LAB=- </title>
-    <title>Practice</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
@@ -29,9 +28,9 @@
             <label><input type="checkbox" /> 15. Make sure  firewall is running and open permanent access for ports which you added on previous tasks</label><br>
             <label><input type="checkbox" /> 16. Make sure selinux is in permissive status</label><br>
             <label><input type="checkbox" /> 17. Make sure you can connect from Centos7 to Centos 6 without password and vice versa</label><br>
-            <label><input type="checkbox" /> 18. </label><br>
-            <label><input type="checkbox" /> 19. </label><br>
-            <label><input type="checkbox" /> 20. </label><br>
+            <label><input type="checkbox" /> 18. Login to system via oracle user and find which files oracle user is using now ia root user, write result to /opt/oracle_user</label><br>
+            <label><input type="checkbox" /> 19. Make sure apache web server works from https also</label><br>
+			<label><input type="checkbox" /> 20. Open top command and display only currenly RUNNING processes.</label><br>
            
  		 </div>
     	</form>
