--- a/html/lab/index.html
+++ b/html/lab/index.html
@@ -6,16 +6,17 @@
   </head>
   <body>
         <h1>LAB TASKS</h1>
-		(all steps must be completed in Centos6 and Centos7)<br><br><br>
+		(all steps must be completed in Centos6 and Centos7)<br>
+		<p class="new2">Download and run this script before starting: <em>http://192.168.1.103/script.sh</em></p><br><br><br>
 		
 		<form>
   		<div class="new chkLabel">
   			<label><input type="checkbox" /> 0. Recover lost root user password. assign root user's password as  admin123</label><br>
             <label><input type="checkbox" /> 1. Login to system via root user. create admin oracle backup and operator users in system. Assign password to these users as their usernames</label><br>
-            <label><input type="checkbox" /> 2. Update  and reboot system</label><br>
-            <label><input type="checkbox" /> 3. Configure network of your system as bridge and obtain ip address from Wifi-router</label><br>
+            <label><input type="checkbox" /> 2. Update kernel  and reboot system</label><br>
+            <label><input type="checkbox" /> 3. Configure network of your system as bridge and obtain ip address from Wifi-router. then configure automatically obtained ip address as static ip address on your system.</label><br>
             <label><input type="checkbox" /> 4. Change ssh port of system from 22 to 59222, deny ssh access to root user. you can connect to host via ssh using new port. Test that root user can not connect to system via ssh. Login via orginary user and switch to root user</label><br>
-            <label><input type="checkbox" /> 5. Create /opt/logbackups named directory and write script  which will copy system ssh access log file to this directory in every 2 minutes. Do not keep more that 5 files in this directory. Keep only last 5 version of file.</label><br>
+            <label><input type="checkbox" /> 5. Create /opt/logbackups named directory and write script  which will copy system ssh access log file to this directory in every 2 minutes. Do not keep more that 5 files in this directory. Keep only last 5 version of file. (cp /var/log/secure   secure_$(date +%Y-%m-%d-%H-%M-%S))</label><br>
             <label><input type="checkbox" /> 6. Add 1GB new disk to system. format with ext4 file system and mount to  /database directory permanently.</label><br>
             <label><input type="checkbox" /> 7. Add new 1GB disk to system, make create 2 new LVM partition from this disk and mount them to /volume1 and /volume2 dirs permanently</label><br>
             <label><input type="checkbox" /> 8. Users's(which added on 1st task) max password life must be 10 days, user must get warning 3 days before password expiration</label><br>
